# fractured-land-hypothesis-replication

./: .gitignore  README.md  main.py  pyproject.toml
ReplicationData/R/: Maincode.R  Plotcode.R  SeaDistance.R  Start.R
ReplicationData/R/Output/: .Rhistory
ReplicationData/STATA/: BootStrap_CN  Baseline.do  BootStrap_EU Baseline.do  GraphforCI_Baseline.do
fractured_land/: __init__.py  config.py  data.py  plotting.py  sea_distance.py  simulation.py
