[project]
name = "fractured-land-hypothesis-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.1.4",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "rtree>=1.4.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py313"

lint.select = [
    "F",
    "E",
    "W",
    "I",
    "D",
    "UP",
    "N",
]

lint.ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "E402", # sys path before import
    "D415", # ends-in-punctuation
    "D100", # missing-docstring
    "D212", # multi-line-summary-first-line
    "D203", # 1 blank line before class
    "N803", # argument-lowercase
    "N806", # variable-in-function-lowercase
]

line-length = 100

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = [
    "D101",
    "D102",
    "D103",
    "N816",
]

[tool.mypy]
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_defs = true
disable_error_code = "top-level-await"
